# LinSerial

./: .gitignore  CMakeLists.txt  Example.cpp  LinSerial.c  LinSerial.cpp  LinSerial.h  LinSerialc.h  Makefile  codestyle.md  readme.md
tests/: CMakeLists.txt  common.cpp  communication_tests.cpp  helpers.cpp  helpers.h  pseudoterminal.cpp  pseudoterminal.h  pts.cpp  pts.h  time_out_tests.cpp
